# fluxetteback

./: TODO.md  fluxetteback.cabal
Test/: Test.hs
src/: Model.hs  Routes.hs  main.hs
webroot/css/: fluxette.css
webroot/html/: index.html
