Name:           fluxetteback
Version:        0.0
Cabal-Version:  >= 1.2
License:        BSD3
Author:         Johannes Drever
Synopsis:       Backend for fluxette
Build-Type:     Simple

Executable server
  Build-Depends:  servant-server
                , servant-blaze
                , servant-jquery
                , blaze-markup
                , blaze-html
                , generic-aeson
                , warp
                , wai
                , aeson
                , text
                , base
                , time
                , either
                , mtl
                , parsec
                , directory
                , bytestring
                , QuickCheck
                , yaml
                , transformers
                , split
                , random-shuffle
                , MonadRandom
                , deepseq

  Main-Is:        main.hs
  Hs-Source-Dirs: src
  other-modules:
     Model

Test-Suite test-all
    main-is: Test.hs
    Hs-Source-Dirs: src, Test
    build-depends: base
       , hspec
    type: exitcode-stdio-1.0
